welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:14: error: value avance is not a member of Unit
    for(j<- 0 to 3){faireMotif();avance();avance();avance()avance();avance();avance();avance()}
                                                           ^